grammar_to_ply/error_msgs.txt
  File "../programs/python/toy_programs/output_programs/errors/hcf_1_error.py", line 1
    Line no. 26: ) missing
          ^
SyntaxError: invalid syntax
